# ai-companion

./: .gitignore  AGENTS.md  AIWindowsCompanion.spec  README.md  build.ps1  config.example.yaml  main.py  paths.py  pyproject.toml  requirements.txt  run.py
ai/: __init__.py  base.py  gemini_client.py  groq_client.py  ollama_client.py  service.py
ai_companion/: __init__.py
comms/: __init__.py  telegram_bot.py
core/: __init__.py  keepalive.py  monitor.py  presence.py  scheduler.py
docs/: telegram-commands.txt
integrations/: __init__.py  autostart.py
memory/: __init__.py  context.py  db.py
tests/: test_ai_service.py  test_companion_window.py  test_context.py  test_main.py  test_memory_db.py  test_monitor.py  test_presence.py  test_scheduler.py  test_settings_window.py  test_telegram_bot.py
ui/: __init__.py  bubble_widget.py  cli_panel.py  companion_window.py  settings_window.py  sprite_widget.py
